--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
 
     // PICASSO
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
